k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiops-incident-service
spec:
  selector:
    app: aiops-incident-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
